# QuintoQuote

./: .gitignore  LICENSE  QuintoQuote.spec  README.md  build_exe.ps1  install.ps1  preventivo_generator_v2.py  pyproject.toml  quintoquote.py  requirements.txt
.github/workflows/: build-windows-exe.yml
TEST/: README.md  genera_documenti_fittizi.py
TEST/input/: pratica_fittizia.json
TEST/output/: RIEPILOGO.md
TEST/values/: allegato-c.json  allegato-e.json  frontespizio-banche.json  frontespizio-integrativo.json
